@@ -18,6 +18,9 @@ SVN
 -bug: Add some command escaping
 -bug: Change default font sizes
 -bug: when using template and search filter on graph management, sql error occurs
+-feature#0001922: Reindex method "Index Count Changed" requires that OID_NUM_INDEXES is given for SNMP Data Queries
+-feature#0001923: Implement counting for script (server) data queries just like OID_NUM_INDEXES
+-feature#0001924: Allow for reindex method "Index Count Changed" to apply to script (server) queries as well
 
 0.8.7g
 -bug: RRDTool 1.4.x not recognized during installation
